--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,11 @@
 			<artifactId>spring-integration-core</artifactId>
 			<version>6.3.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.5.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
