--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
       com.tr4.db.restapi: INFO
   cloud:
     gcp:
-      project_id: tr4-2024-06-deutschebank
+      project-id: tr4-2024-06-deutschebank
       credentials:
         location:
+booking:
+  event:
+    topic: "booking-test"
